--- a/index.html
+++ b/index.html
@@ -1,1 +1,21 @@
-<h1>Hi!</h1>
+<h1> Lesson Outcome </h1>
+<h2> The Basics </h2>
+
+<ol> 
+  <li>Setting up our dev enviroment</li> 
+  <li>How the internet works</li>
+  <li>What is GIT and GitHub</li>
+  <li>MDN</li>
+</ol>  
+
+<h2> HTML </h2>
+<ul> 
+  <li>HTML stands for <b>Hyper Text Markup Language</b></li> 
+  <li>Basic Tags:</li>
+    <ol>
+    <li>Doctype</li>
+      <li>HTML</li>
+      <li>Head</li>
+    </ol>
+    <li><i>Lists</i></li>
+</ul> 
