--- a/index.html
+++ b/index.html
@@ -27,5 +27,12 @@
     </ol>
     <li><i>Lists</i></li>
 </ul> 
+
+
+<h1> Experiment 2 </h1>
+<h2> Images </h2>
+<img src="https://cdn.britannica.com/65/216665-004-C01A8D9D/Sisyphus-Titian-1548-49-Prado-Museum-Madrid.jpg">
+<h2> Links </h2>
+<a href="https://www.britannica.com/topic/Sisyphus">Learn more about Sisyphus</a>
 </body>
 </html>
