--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
 <h1> Experiment 2 </h1>
 <h2> Images </h2>
-<img src="https://cdn.britannica.com/65/216665-004-C01A8D9D/Sisyphus-Titian-1548-49-Prado-Museum-Madrid.jpg">
+<img src="https://cdn.britannica.com/65/216665-004-C01A8D9D/Sisyphus-Titian-1548-49-Prado-Museum-Madrid.jpg" alt="picture of Sisyphus">
 <h2> Links </h2>
 <a href="https://www.britannica.com/topic/Sisyphus">Learn more about Sisyphus</a>
 </body>
