--- a/index.html
+++ b/index.html
@@ -1,23 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+<head> 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
 <body>
+  <link rel="stylesheet" href="style.css">
     <h1> Lesson Outcome </h1>
 <h2> The Basics </h2>
 
-<ol> 
+<ol>
+  
   <li>Setting up our dev enviroment</li> 
   <li>How the internet works</li>
   <li>What is GIT and GitHub</li>
   <li>MDN</li>
 </ol>  
 
-<h2> HTML </h2>
-<ul> 
+<h2 id="small">HTML</h2>
   <li>HTML stands for <b>Hyper Text Markup Language</b></li> 
   <li>Basic Tags:</li>
     <ol>
@@ -27,6 +28,27 @@
     </ol>
     <li><i>Lists</i></li>
 </ul> 
+
+
+<h1>  Experiment 2 </h1>
+<h2> Images </h2>
+<img src="https://cdn.britannica.com/65/216665-004-C01A8D9D/Sisyphus-Titian-1548-49-Prado-Museum-Madrid.jpg" alt="picture of Sisyphus">
+
+<p>
+Later legend related that when Death came to fetch him, Sisyphus chained Death up so that no one died. Finally, Ares came to aid Death, and Sisyphus had to submit. In the meantime, Sisyphus had told his wife, Merope, not to perform the usual sacrifices and to leave his body unburied. Thus, when he reached the underworld, he was permitted to return to punish her for the omission. Once back at home, Sisyphus continued to live to a ripe old age before dying a second time...
+
+</p>
+
+<h2> Links: </h2>
+<a href="https://www.britannica.com/topic/Sisyphus">Learn more about Sisyphus</a>
+<br>
+<br>
+<a href="https://en.wikipedia.org/wiki/Sisyphus">Learn even more </a>
+<br>
+<br>
+<a id="red_highlight" href="https://youtu.be/q4pDUxth5fQ?si=d5QGaD1dEZzw2Smd">I'd rather watch a vid! </a>
+</body>
+</html>
 
 
 <h1> Experiment 2 </h1>
