--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <link rel="stylesheet" href="style.css">
+  
     <h1> Lesson Outcome </h1>
 <h2> The Basics </h2>
 
@@ -19,15 +20,17 @@
 </ol>  
 
 <h2 id="small">HTML</h2>
+<ul>
   <li>HTML stands for <b>Hyper Text Markup Language</b></li> 
-  <li>Basic Tags:</li>
+  <li>Basic Tags:
     <ol>
-    <li>Doctype</li>
+      <li>Doctype</li>
       <li>HTML</li>
       <li>Head</li>
     </ol>
-    <li><i>Lists</i></li>
-</ul> 
+  </li>
+  <li><i>Lists</i></li>
+</ul>
 
 
 <h1>  Experiment 2 </h1>
